# rd-europeana-python-api

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check-doc-compilation.yaml  publish-to-pipy.yaml  run-tests.yaml  style-check.yaml
docs/: README.md  conf.py  requirements.txt
docs/source/: about.rst  apis.rst  conf.py  index.rst  package.rst  recordapi.rst  searchapi.rst  tutorials.rst  usage.rst  utils.rst
docs/source/tutorials_source/: color_clustering_tutorial.py  color_clustering_tutorial.rst  entity_api_tutorial.py  entity_api_tutorial.rst  test.rst  tutorial_1.py  tutorial_2.py  tutorial_translation.rst
docs/source/tutorials_source/color_clustering_tutorial_files/: color_clustering_tutorial.ipynb  color_clustering_tutorial.py
docs/source/tutorials_source/entity_api_tutorial_files/: entity_api_tutorial.ipynb  entity_api_tutorial.py
docs/source/tutorials_source/tutorial_translation_files/: tutorial_translation.ipynb  tutorial_translation.py
europeana/: api.py  edm.py  main.py  responses.py  timing.py  utils.py
notebooks/: demo_Leiden.ipynb  python_interface_prototype.ipynb
outsidefolder/: outsidefile.py
pyeuropeana/: apis.py  tests.py  utils.py
src/: europeana_api.py  test_cicd.py
src/pyeuropeana/: __init__.py  apis.py  mock_py.py  utils.py
src/pyeuropeana/apis/: IIIF.py  __init__.py  entity.py  iiif.py  record.py  search.py
src/pyeuropeana/utils/: __init__.py  auth.py  edm_utils.py  img_utils.py
tests/: aux_IIIF.py  aux_entity.py  aux_record.py  aux_search.py  conftest.py  test_entity.py  test_iiif.py  test_record.py  test_search.py  tests.py  tests_facets.py  trigger.py
tests/apis/: test_aux_search.py  test_entity.py  test_iiif.py  test_record.py  test_search.py
tests/utils/: test_img_utils.py
